# obsidian-valult-sync

./: .env.example  .gitignore  deploy-plugin.sh  dev-plugin.sh  run-server.sh
docs/: API.md  ARCHITECTURE.md  E2EE.md  EXAMPLE_SYNC.md  IMPLEMENTATION_PLAN.md  INSPIRATION.md  MVP.md  MVP_CHECKLIST.md  PLUGIN_USAGE.md  PLUGIN_UX_FLOW.md
docs/deprecated/: EXAMPLE_SYNC.md  IMPLEMENTATION_PLAN.md  INSPIRATION.md  README.md
plugin/: .env.example  .gitignore  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
plugin/scripts/: deploy.mjs  dev-obsidian.mjs  postbuild.mjs
plugin/src/: api.ts  e2ee-state.ts  e2ee.ts  loro-runtime.ts  main.ts  plugin-registration.ts  plugin-state-store.ts  runtime.ts  settings-controller.ts  settings-ui.ts  settings.ts  status-bar.ts  sync-coordinator.ts  sync-engine.ts  sync-errors.ts  sync-scope.ts  (+1 more)
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_multi_vault.sql  0003_change_device_id.sql  0004_devices.sql  0005_e2ee_payload_metadata.sql  0006_vaults.sql  0007_file_versions.sql  0008_vault_e2ee_fingerprint.sql  0009_crdt_documents.sql  0010_cleanup_legacy_sync_schema.sql
server/src/: app.rs  auth.rs  config.rs  db.rs  dto.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
server/src/routes/: changes.rs  delete.rs  devices.rs  documents.rs  events.rs  file.rs  health.rs  history.rs  mod.rs  rename.rs  restore.rs  snapshot.rs  upload.rs  vaults.rs
server/src/services/: doc_sync.rs  mod.rs  registry.rs  sync.rs
server/tests/: api.rs
(+60 files in other folders)
