[package]
name = "obsidian-sync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
futures-core = "0.3"
loro = "1.10.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
